# xi-win

./: Cargo.toml
src/: edit_view.rs  main.rs  menus.rs  textline.rs
