[package]
name = "xi-win"
version = "0.1.1"
license = "Apache-2.0"
authors = ["Raph Levien <raph@google.com>"]
description = "Windows front-end for xi editor."

[dependencies]

xi-core-lib = { git = "https://github.com/xi-editor/xi-editor" }
xi-rpc = { git = "https://github.com/xi-editor/xi-editor" }
serde = "1.0"
serde_json = "1.0"

[dependencies.piet]
path = "../druid/piet"
#git = "https://github.com/xi-editor/druid"

[dependencies.druid-shell]
path = "../druid/druid-shell"
#git = "https://github.com/xi-editor/druid"

[dependencies.druid]
path = "../druid"
#git = "https://github.com/xi-editor/druid"
